# rust-ddd-oauth-casbin

./: .env.example  Cargo.toml  Dockerfile  Makefile  README.md
etc/: permissions.json
migrations/: 20240830024919_init.down.sql  20240830024919_init.up.sql  20240909040957_add_role_permission_table.down.sql  20240909040957_add_role_permission_table.up.sql
src/: main.rs
src/application/: mod.rs  state.rs
src/application/dto/auth/: email_request.rs  jwt_claims.rs  mod.rs  oauth2_request.rs  oauth2_response.rs
src/application/dto/role/: create_update_role_request.rs  get_role_request.rs  mod.rs
src/application/services/: mod.rs  oauth_svc.rs  redis_svc.rs
src/domain/entities/: mod.rs  permission.rs  role.rs  user.rs  user_oauth_provider.rs  user_role.rs  user_session.rs
src/domain/repositories/: mod.rs  oauth_provider_repo.rs  redis_repo.rs  role_repo.rs  user_repo.rs  user_session_repo.rs
src/infra/: config.rs  graceful.rs  mod.rs  rbac.rs  server.rs
src/infra/common/: constants.rs
src/infra/data/: postgres.rs  redis.rs
src/infra/errors/: app_error.rs
src/infra/oauth2/: constants.rs  google.rs  mod.rs
src/infra/repositories/: mod.rs  pg_oauth_provider.rs  pg_role_repo.rs  pg_user_repo.rs  pg_user_session.rs  redis_repo_impl.rs
src/infra/utils/: google_jwt.rs  jwt_maker.rs  mod.rs  pagination.rs  password.rs  response.rs
src/interface/api/: auth_handler.rs  mod.rs  permission_handler.rs  public_oauth_handler.rs  role_handler.rs  super_handler.rs
src/interface/middleware/: auth_mw.rs  mod.rs  super_mw.rs
(+17 files in other folders)
