[package]
name = "rust-ddd-oauth-casbin"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
envconfig = "0.10.0"
tokio = { version = "1.39.2", features = ["full", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0"
axum = "0.7.5"
serde = { version = "1.0.207", features = ["derive"] }
tower-http = { version = "0.5.2", features = ["cors"] }
serde_json = "1.0.124"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
argon2 = "0.5.3"
async-trait = "0.1.81"
jsonwebtoken = "9.3.0"
bb8-redis = "0.16.0"
axum-extra = { version = "0.9.3", features = ["cookie"]}
time = "0.3.36"
slug = "0.1.6"
sqlx-adapter = { version = "1.2.0", default-features = false, features = ["postgres", "runtime-tokio-rustls"]}
casbin = { version = "2.2.0", default-features = false, features = ["runtime-tokio", "logging", "incremental"] }
oauth2 = "4.4.2"
reqwest = { version = "0.12.7", features = ["json"] }
